2020-02-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Sort when new details about a message are found

	* libbalsa/mailbox.c (lbm_cache_message): if we get new
	information about the message, queue rethreading;
	(libbalsa_mailbox_finalize),
	(libbalsa_mailbox_close),
	(lbm_sort_idle_cb),
	(lbm_set_threading): rename
	LibBalsaMailboxPrivate:set_threading_idle_id to
	lbm_sort_idle_cb.

2020-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Simplify and make more robust

	* src/main-window.c (balsa_window_destroy): bw_idle_remove() has
	been removed, so remove the GSource directly;
	(bw_idle_replace): ditto;
	(bw_idle_cb): scrap some useless tests;
	(bw_index_changed_cb): check that priv->preview is non-NULL.

2020-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Reset messages-threaded in the open method instead of
	the close method.

	* libbalsa/mailbox.c (libbalsa_mailbox_open),
	(libbalsa_mailbox_close):

2020-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Build: Do not check for getaddrinfo

	* .gitignore: don't ignore config.h.in;
	* configure.ac: do not check for getaddrinfo;
	* meson.build: ditto.

2020-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Add a file that's needed in the autotools build to the repository

	* config.h.in:

2020-02-02  Albrecht Dreß  <albrecht.dress@arcor.de>

	Build tools: Remove test for libresolv

	* configure.ac:
	* meson.build:

2020-02-01  Albrecht Dreß  <albrecht.dress@arcor.de>

	[Patch] ical improvements

	* README, configure.ac, meson.build: require libical >= 2.0.0 instead of 3.0.0
	* libbalsa/rfc2445.c: libbalsa_vevent_reply(): add several
	optional fields to the “REPLY” message as to work around a M$
	Exchange/Outlook bug
	* src/balsa-mime-widget-vcalendar.c: balsa_vevent_widget():
	ref the VCal object containing the time zone data if we show
	the buttons for sending a reply; vevent_reply(): construct he